--- a/requirements.txt
+++ b/requirements.txt
@@ -8,12 +8,14 @@ colorama==0.4.6
 dnspython==2.7.0
 Flask==3.1.0
 Flask-Cors==5.0.0
+gunicorn==23.0.0
 h11==0.14.0
 idna==3.10
 itsdangerous==2.2.0
 Jinja2==3.1.5
 MarkupSafe==3.0.2
 outcome==1.3.0.post0
+packaging==24.2
 pycparser==2.22
 pymongo==4.10.1
 PySocks==1.7.1
