--- a/requirements.txt
+++ b/requirements.txt
@@ -4,6 +4,7 @@ blinker==1.9.0
 bs4==0.0.2
 certifi==2024.12.14
 cffi==1.17.1
+charset-normalizer==3.4.1
 click==8.1.8
 colorama==0.4.6
 dnspython==2.7.0
@@ -20,6 +21,8 @@ packaging==24.2
 pycparser==2.22
 pymongo==4.10.1
 PySocks==1.7.1
+python-dotenv==1.0.1
+requests==2.32.3
 selenium==4.27.1
 sniffio==1.3.1
 sortedcontainers==2.4.0
@@ -28,6 +31,7 @@ trio==0.28.0
 trio-websocket==0.11.1
 typing_extensions==4.12.2
 urllib3==2.3.0
+webdriver-manager==4.0.2
 websocket-client==1.8.0
 Werkzeug==3.1.3
 wsproto==1.2.0
